Image container overflow is no longer needed.

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -136,7 +136,6 @@ body {
 }
 @media (min-width: 768px) {
 	.img-container {
-		overflow: hidden;
 		position: absolute;
 		top: 50%;
 		left: 50%;
